--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     
     <head>
-        <title>TVA | Subscriptions</title>
+        <title>TheMemphisBelle</title>
         <link type="text/css" rel="stylesheet" href="Stylesheets/stylesheet.css" />
         <meta name="author" content="Matthew Austria & Joseph Baca">
         <meta name="description" content="A website for my Youtube Channel which is named TheVenomAssassin">
