--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <!--webpage banner -->
             <div class="banner">
                 <div class="container">
-                    <h1>TheVenomAssassin</h1>
+                    <h1>The Memphis Bell</h1>
                 </div>
             </div>
             <!--Sidebar-->
