--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="clearboth"></div>
         </div>
         <div class="footer">
-            <p class="container">YouTube Channel since 2013</p>
+            <p class="container">Since 1942</p>
         </div>
     </body>
     </html>
