--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <!--Sidebar-->
             <div class="sidebar">
-                <div class="container">
+                <div class="container"
                     <ul>
                         <li><a href="index.html" id="home">Home Page</a></li>
                         <li><a href="mailto:VenomAssassin123@gmail.com" id="email">Email Me</a></li>
