--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <div class="container"
                     <ul>
                         <li><a href="index.html" id="home">Home Page</a></li>
-                        <li><a href="mailto:VenomAssassin123@gmail.com" id="email">Email Me</a></li>
-                        <li><a href="MySubs/index.html" id="mySubs">My Subscriptions</a></li>
-                        <li><a href="Videos/index.html" id="Videos">My Videos</a></li>
-                        <li><a href="ContactInfo/index.html" id="contactInfo">Contact Me</a></li>
-                        <li><a href="Events/index.html" id="upcomingEvents">Upcoming Events</a></li>
+                        <li><a href="mailto:VenomAssassin123@gmail.com" id="email">Email Us</a></li>
+                        <li><a href="ContactUs/index.html" id="Contact Us">Contact Us</a></li>
+                        <li><a href="History/index.html" id="History">Bell History</a></li>
+                        <li><a href="Games/index.html" id="Games">Games</a></li>
+                        <li><a href="Resources/index.html" id="Resources">Upcoming Events</a></li>
                     </ul>  
                 </div>
             </div>
