--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="content">
-                <div class="container">
+                <!--<div class="container">-->
                     <div class="push">
                          <div id="pictures">
                             <img class="homePageImage" src="http://www.militaryfactory.com/wallpaper/imgs/1920x1200-nose-art-memphis-belle.jpg" alt="I am sorry I can't load this">
@@ -39,7 +39,7 @@
 
                         </div>
                     </div>
-                </div>
+                <!--</div>-->
             </div>
             
         <div class="clearboth"></div>
