--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <!--<div class="container">-->
                     <div class="push">
                          <div id="pictures">
-                            <img class="homePageImage" src="http://www.google.com/imgres?imgurl=http%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fb%2Fb3%2FC-141_Memphis_Belle_Nose_Art.jpeg&imgrefurl=http%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3AC-141_Memphis_Belle_Nose_Art.jpeg&h=1312&w=2000&tbnid=9Kph8rCj8KPUWM%3A&zoom=1&docid=-ui6pByzn4DCfM&ei=Jl9pVMvpCIeFyQSOs4GQDw&tbm=isch&ved=0CD4QMygaMBo&iact=rc&uact=3&dur=427&page=2&start=18&ndsp=23">
+                            <img class="homePageImage" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTw-ZD7vwUVu9B6zv-6x1xAWFTgNg7whi737A3CNr1t3sMfAPqj">
                             <p></p>
                             <p>&nbsp;</p>
 
