--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <!--<div class="container">-->
                     <div class="push">
                          <div id="pictures">
-                            <img class="homePageImage" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTw-ZD7vwUVu9B6zv-6x1xAWFTgNg7whi737A3CNr1t3sMfAPqj">
+                            <img class="homePageImage" src="http://upload.wikimedia.org/wikipedia/commons/b/b3/C-141_Memphis_Belle_Nose_Art.jpeg">
                             <p></p>
                             <p>&nbsp;</p>
 
