--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>TheMemphisBelle</title>
         <link type="text/css" rel="stylesheet" href="Stylesheets/stylesheet.css" />
+        <link type="text/css" rel="stylesheet" href="Stylesheets/css/style.css"  />
         <meta name="author" content="Matthew Austria & Joseph Baca">
         <meta name="description" content="A website for my Youtube Channel which is named TheVenomAssassin">
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
