--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
         <meta name="author" content="Matthew Austria & Joseph Baca">
         <meta name="description" content="A website for my Youtube Channel which is named TheVenomAssassin">
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Black+Ops+One">
+    <style>
+      body {
+        font-family: 'Black Ops', serif;
+        font-size: 48px;
+      }
+    </style>
     </head>
     <body>
         <div class="wrapper">
