--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>TheMemphisBelle</title>
         <link type="text/css" rel="stylesheet" href="Stylesheets/stylesheet.css" />
-        <link href='http://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css' />
+        <link href='http://www.google.com/fonts#QuickUsePlace:quickUse/Family:Black+Ops+One' rel='stylesheet' type='text/css' />
         <meta name="author" content="Matthew Austria & Joseph Baca">
         <meta name="description" content="A website for my Youtube Channel which is named TheVenomAssassin">
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -12,7 +12,7 @@
     <style>
       body {
         font-family: 'Black Ops', serif;
-        font-size: 48px;
+        font-size: 20px;
       }
     </style>
     </head>
