--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Matthew Austria & Joseph Baca">
         <meta name="description" content="A website for my Youtube Channel which is named TheVenomAssassin">
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Black+Ops+One">
+        <link href=' http://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
     <style>
       body {
         font-family: 'Black Ops', serif;
