--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li><a href="index.html" id="home">Home Page</a></li>
                         <li><a href="mailto:VenomAssassin123@gmail.com" id="email">Email Us</a></li>
                         <li><a href="ContactUs/index.html" id="Contact Us">Contact Us</a></li>
-                        <li><a href="History/index.html" id="History">Bell History</a></li>
+                        <li><a href="History/index.html" id="History">Belle History</a></li>
                         <li><a href="Games/index.html" id="Games">Games</a></li>
                         <li><a href="Resources/index.html" id="Resources">Upcoming Events</a></li>
                     </ul>  
